--- a/assets/herman.css
+++ b/assets/herman.css
@@ -1,5 +1,6 @@
 :root {
-  font-size: 62.5%; /* 10px */
+  font-size: 62.5%;
+  /* 10px */
   --color-dark: #181a20;
   --color-light: #fafafa;
   --color-primary: #1a8fe3;
@@ -33,9 +34,11 @@ header {
   padding-bottom: var(--spacing);
 }
 
-nav a, a.blog-tags {
+nav a,
+a.blog-tags {
   margin-right: calc(var(--spacing) / 2);
 }
+
 a.blog-tags {
   line-height: 2;
 }
@@ -61,7 +64,7 @@ a:hover {
 }
 
 img {
-  display: block;
+  display: inline-block;
   max-width: 100%;
   height: auto;
 }
@@ -77,12 +80,15 @@ h4 {
 h1 {
   font-size: calc(var(--size) * 4.2);
 }
+
 h2 {
   font-size: calc(var(--size) * 3.4);
 }
+
 h3 {
   font-size: calc(var(--size) * 2.6);
 }
+
 h4 {
   font-size: calc(var(--size) * 1.8);
 }
@@ -91,6 +97,7 @@ ul,
 ol {
   padding-inline-start: var(--spacing);
 }
+
 li {
   margin-block-start: var(--spacing);
 }
@@ -105,16 +112,19 @@ blockquote {
 :is(h1, h2, h3, h4, blockquote) {
   margin-block-end: calc(var(--spacing) / 2);
 }
-:is(h1, h2, h3, h4) + * {
+
+:is(h1, h2, h3, h4)+* {
   margin-block-start: calc(var(--spacing) / 3);
 }
-:is(h1, h2, h3, h4) + :where(h2, h3, h4) {
+
+:is(h1, h2, h3, h4)+ :where(h2, h3, h4) {
   margin-block-start: calc(var(--spacing) * 2);
 }
 
 .title {
   text-decoration: none;
 }
+
 .title h1 {
   font-size: calc(var(--size) * 3.4);
   margin-top: calc(var(--spacing) / 2);
@@ -124,10 +134,12 @@ ul.blog-posts {
   list-style-type: none;
   padding: unset;
 }
+
 ul.blog-posts li {
   display: flex;
   flex-direction: column;
 }
+
 ul.blog-posts li span {
   min-width: 11ch;
 }
@@ -143,6 +155,7 @@ code {
   background-color: #282a36;
   font-size: calc(var(--size) * 1.4);
 }
+
 pre code {
   display: block;
   padding: var(--spacing);
@@ -154,6 +167,7 @@ pre code {
 table {
   width: 100%;
 }
+
 table,
 th,
 td {
@@ -195,7 +209,7 @@ figure {
   margin-inline-end: 0em;
 }
 
-figcaption > p {
+figcaption>p {
   margin-block-start: 9px;
   text-align: center;
   font-style: italic;
